--- a/style/style.scss
+++ b/style/style.scss
@@ -67,7 +67,7 @@ nav {
     border-radius: 3px;
     color: white;
     h1 {
-      font-size: 2rem;
+      font-size: 1.5rem;
       margin-bottom: 0.12em;
     }
     h2 {
@@ -82,6 +82,8 @@ nav {
     }
     .skills {
       margin: 1em 0;
+      display: flex;
+      flex-wrap: wrap;
       div {
         width: 120px;
         height: 120px;
