--- a/style/style.scss
+++ b/style/style.scss
@@ -89,6 +89,7 @@ nav {
         height: 120px;
         border-radius: 50%;
         margin-right: 1em;
+        margin-bottom:0.12em;
         text-align: center;
         &:hover{
             width: 130px;
