--- a/style/_responsive.scss
+++ b/style/_responsive.scss
@@ -1,1 +1,20 @@
 // Stylesheet for Respossive webdesighed
+@media only screen and (max-width: 991px) {
+  body {
+    background-color: rgb(0, 255, 0);
+  }
+  .description{
+    display: flex;
+    flex-wrap: wrap;
+    .sphoto{
+        margin: auto;
+    }
+  }
+  .footer{
+      display: flex;
+      flex-wrap: wrap;
+      div{
+          margin: auto;
+      }
+  }
+}
